--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <h1>Crate and Vinyl</h1>
         <div id="root"></div>
         <!-- <script src="" async defer></script> -->
     </body>
